# nomad-external-eln-integrations

./: .cruft.json  MANIFEST.in  README.md  README.md.rej  mkdocs.yml  move_template_files.sh  pyproject.toml  pyproject.toml.rej
docs/: index.md
src/nomad_external_eln_integrations/example_uploads/: __init__.py
src/nomad_external_eln_integrations/example_uploads/files/: example.eln
src/nomad_external_eln_integrations/parsers/: __init__.py  __init__.py.rej
src/nomad_external_eln_integrations/parsers/chemotion/: nomad_plugin.yaml  parser.py
src/nomad_external_eln_integrations/parsers/elabftw/: __main__.py  nomad_plugin.yaml  parser.py
src/nomad_external_eln_integrations/schema_packages/: __init__.py.rej
src/nomad_external_eln_integrations/schema_packages/elabftw/: __init__.py  schema.py
src/nomad_external_eln_integrations/schema_packages/labfolder/: __init__.py  schema.py
src/nomad_external_eln_integrations/schema_packages/openbis/: __init__.py  schema.py
tests/data/parsers/elabftw/backward_compat/: ro-crate-metadata.json
tests/data/parsers/elabftw/backward_compat/2024-01-01 - Test Experiment - abc123/: export-elabftw.json
tests/data/schemas/labfolder/: example-labfolder.archive.json
tests/parsers/chemotion/: test_chemotion.py
tests/parsers/elabftw/: test_elabftw_parser.py
tests/schema_packages/labfolder/: test_labfolder.py
tests/schema_packages/openbis/: test_openbis.py
